--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ jobs:
       language: shell
       before_install:
         - choco install python --version 3.8
-        - export PATH="\c\Python38:\c\Python38\Scripts:$PATH"
+        - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
         # ensure it's python3...
-        - ln -s \c\Python38\python.exe \c\Python38\python3.exe
+        - ln -s /c/Python38/python.exe /c/Python38/python3.exe
         
 env:
   global:
@@ -22,6 +22,7 @@ env:
   
 install:
   - python3 -m pip install cibuildwheel
+  - python3 -m pip install numpy
   
 script:
   - python3 -m cibuildwheel --output-dir wheelhouse
