--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,12 @@ install:
   - python3 -m pip install numpy
   
 script:
-  - python3 -m pip install –upgrade pip
-  - python3 -m pip install --user --upgrade setuptools wheel
+  - python3 setup.py sdist
   - python3 setup.py bdist_wheel
   
 after_sucess:
   - |
     if [[ $TRAVIS_TAG ]]; then
       python3 -m pip install twine
-      python3 -m twine upload wheelhouse/*.whl
+      python3 -m twine upload dist/*
     fi
