--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
   
 install:
   - python3 -m pip install numpy
+  - python3 -m pip install --upgrade setuptools wheel
   
 script:
   - python3 setup.py sdist
