--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ jobs:
     - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
     - ln -s /c/Python38/python.exe /c/Python38/python3.exe
 install:
-- python3 -m pip install numpy
 - python3 -m pip install --upgrade setuptools wheel
 - python3 -m pip install cibuildwheel==1.6.1
 script:
-- cibuildwheel --output-dir dist
+- cibuildwheel --output-dir dist --before-all "pip install numpy"
 deploy:
   provider: pypi
   username: __token__
