--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,11 @@ jobs:
       os: windows
       language: shell
       before_install:
-        - choco install python3 --version 3.8
-      env:
-        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
+        - choco install python --version 3.8.0
+        - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
         # make sure it's on PATH as 'python3'
         - ln -s /c/Python38/python.exe /c/Python38/python3.exe
+      env:
         - CIBW_BUILD="cp35-* cp36-* cp37-* cp38-*"
 env:
   global:
