--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ numpy = "^1.25.2"
 
 [build-system]
 requires = ["poetry-core", "cython", "numpy", "setuptools"]
-build-backend = "poetry.masonry.api"
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.build]
 generate-setup-file = false
